<resources>
    <string name="app_name">OneOm</string>
    <string name="episode_player_intent">episode.player.intent.oneom</string>
    <string name="main_static_entities">fdsf.fdsdsf.dfdsfstaticndjlvljsventities</string>
    <string name="main_episode_list">fdsf.fdsepisodesvljsvelistties</string>
    <string name="url_for_web_view_activity">fdsf.fdsurelpisfoodesrvlwebjsveviewlisactivitytties</string>
    <string name="ep">E%1$dS%2$d</string>



    <string name="torrent_client_select_dialog_title">Select</string>
    <string name="description">Description</string>
    <string name="no_description">No description</string>
    <string name="airdate">Airdate</string>
    <string name="waiting">Waiting</string>

    <string name="episode">Episode</string>
    <string name="subtitles">Subtitles</string>
    <string name="torrent">Torrent</string>
    <string name="online">Online</string>
    <string name="related">Related</string>
    <string name="waiting_">Waiting...</string>
    <string name="episodes">Episodes</string>
    <string name="last_updated">Last Updated: %1$s</string>
    <string name="never">Never</string>
    <string name="date_decor">-- %1$s --</string>
    <string name="no_searh_data">No search data for %1$s, will appear in future updates</string>
    <string name="search">Search</string>
    <string name="future_episodes">Future episodes</string>
    <string name="with_torrents">With torrents</string>
    <string name="settings">Settings</string>
    <string name="enter_serial_name">Enter Serial Name</string>
    <string name="unknown">Unknown</string>
    <string name="till_now">Till now</string>
    <string name="serial_page">Serial page</string>
    <string name="go_search">Go search</string>
    <string name="loading">Loading...</string>
    <string name="no_related_items">There are no related items for this episode</string>
    <string name="no_source">We\'re sorry, but we don\'t have engine for this source yet. It will coming soon.</string>
    <string name="back">Back</string>
    <string name="select_app">Select app</string>
    <string name="no_apps">There are no applications for perform this action</string>
    <string name="no_direct_link_to_video">Sorry, but there is no direct link to this online show. Please use search or try web.</string>
    <string name="no_direct_link_to_torrent">Sorry, but there is no direct link to this torrent. Please use search or try web.</string>
    <string name="no_results">No results</string>
    <string name="just_edit_search">Just edit the search string</string>
    <string name="parsing_error">There is parsing error. Developer has got error report and will handle it if it possible soon. Now we apologize for inconvenience.</string>
    <string name="video_was_deleted">File has been deleted.</string>
    <string name="no_links">No links</string>
    <string name="select_resolution">Select resolution</string>
</resources>
