<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.iam.oneom.pages.main.search.online.OnlinesSearchViewModel" />

        <import type="me.tatarka.bindingcollectionadapter2.LayoutManagers" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_transparent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:subtitle="@string/just_edit_search"
            android:theme="@style/toolbarColored"
            android:title="@{vm.source.name}"
            tools:title="Vodlocker" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_search_light"
                    android:hint="@string/search"
                    android:text="@{vm.searchString}"
                    android:textColor="@color/middle"
                    android:theme="@style/AppCompatEditTextLightThene"
                    app:textWatcher="@{vm.onTextEdit}"
                    tools:text="Breaking bad" />
            </android.support.design.widget.TextInputLayout>

            <!--<ImageButton-->
            <!--android:id="@+id/search_button"-->
            <!--android:layout_width="48dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignBottom="@+id/til"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_alignTop="@+id/til"-->
            <!--android:background="?attr/selectableItemBackground"-->
            <!--android:text="@string/search"-->
            <!--android:textAllCaps="true"-->
            <!--app:srcCompat="@drawable/ic_search_light" />-->
        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                app:itemBinding="@{vm.binding}"
                app:items="@{vm.items}"
                app:layoutManager="@{LayoutManagers.grid(3)}"
                app:onItemClick="@{vm.onItemClick}"
                app:visible="@{vm.items.size() != 0}"
                tools:visibility="gone" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:visibility="visible"
                android:visibility="gone"
                app:visible="@{vm.items.size() == 0}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_results"
                    android:textAllCaps="true"
                    style="@style/headerTextLight"
                    app:visible="@{!vm.justLoaded &amp;&amp; vm.items.size == 0}" />
            </FrameLayout>

            <ProgressBar
                tools:visibility="visible"
                android:visibility="gone"
                android:id="@+id/cpv"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateBehavior="repeat"
                app:visible="@{vm.loading}" />

        </FrameLayout>

    </LinearLayout>
</layout>